--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "MagicMirror-Module-Template",
-  "version": "1.2.0",
-  "description": "Module Base template for create new modules for MagicMirror",
-  "main": "MagicMirror-Module-Template.js",
+  "name": "MMM-Trains-Trafikverket",
+  "version": "1.0.0",
+  "description": "Additional Module for MagicMirror², to display train departure times for railway stations within Sweden.",
+  "main": "MMM-Trains-Trafikverket.js",
   "scripts": {
     "test": "./node_modules/grunt/bin/grunt"
   },
-  "author": "Rodrigo Ramírez Norambuena",
+  "author": "Per Gärden",
   "license": "MIT",
   "devDependencies": {
     "grunt": "latest",
